[package]
name = "leetcode"
version = "0.1.0"
edition = "2024"

# https://leetcode.com/problems/two-sum/
[[bin]]
name = "1"
path = "problems/1.rs"

# https://leetcode.com/problems/median-of-two-sorted-arrays/
[[bin]]
name = "4"
path = "problems/4.rs"

# https://leetcode.com/problems/string-to-integer-atoi/
[[bin]]
name = "8"
path = "problems/8.rs"

# https://leetcode.com/problems/valid-number/
[[bin]]
name = "65"
path = "problems/65.rs"

# https://leetcode.com/problems/count-unique-characters-of-all-substrings-of-a-given-string/
[[bin]]
name = "825"
path = "problems/825.rs"

# https://leetcode.com/problems/distribute-candies-among-children-i/
[[bin]]
name = "2928"
path = "problems/2928.rs"
