[package]
name = "leetcode"
version = "0.1.0"
edition = "2024"

# Two Sum
[[bin]]
name = "1"
path = "problems/1.rs"

# Longest Substring Without Repeating Characters
[[bin]]
name = "3"
path = "problems/3.rs"

# Median Of Two Sorted Arrays
[[bin]]
name = "4"
path = "problems/4.rs"

# Longest Palindromic Substring
[[bin]]
name = "5"
path = "problems/5.rs"

# String To Integer Atoi
[[bin]]
name = "8"
path = "problems/8.rs"

# Container With Most Water
[[bin]]
name = "11"
path = "problems/11.rs"

# Valid Number
[[bin]]
name = "65"
path = "problems/65.rs"

# Longest Consecutive Sequence
[[bin]]
name = "128"
path = "problems/128.rs"

# Word Break
[[bin]]
name = "139"
path = "problems/139.rs"

# Palindromic Substrings
[[bin]]
name = "647"
path = "problems/647.rs"

# Count Unique Characters Of All Substrings Of A Given String
[[bin]]
name = "825"
path = "problems/825.rs"

# Distribute Candies Among Children I
[[bin]]
name = "2928"
path = "problems/2928.rs"
